# NamePy

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
evaluation/advanced_files/flake8/: checker.py  discover_files.py  processor.py  style_guide.py  violation.py
evaluation/advanced_files/libcst/: _decorators.py  _type_enforce.py  _visitors.py  module.py  name_provider.py
evaluation/advanced_files/pylint/: base_checker.py  base_reporter.py  message_definition.py  message_id_store.py  modified_iterating_checker.py
evaluation/advanced_files/spacy/: language.py  lookups.py  pipe_analysis.py  schemas.py  scorer.py
evaluation/intermediate_files/Bloom_Files/: adv1.py  adv2.py  adv3.py  visitedgraph.py
evaluation/intermediate_files/Jess_Files/: Binary-Heap-to-Sorted-List.py  Binary-Heap.py  Correlation-Analysis.py  Merge-Sort.py  (+1 more)
evaluation/results/: advanced.md  beginner.md  intermediate.md
namepy/: CLI.py  __init__.py  find.py  visitor.py
src/: CLI.py  find.py
test-files/: test_file.py  test_file01.py
test_files/basic_files/: test_file.py
test_files/gatorgrader_files/: arguments.py  checkers.py  comments.py  constants.py  description.py  display.py  entities.py  files.py  fragments.py  invoke.py  leave.py  markdown.py  orchestrate.py  report.py  repository.py  run.py  util.py
test_files/gatorminer_files/: __init__.py  analyzer.py  arguments.py  constants.py  doc_similarity.py  get_handler.py  json_util.py  markdown.py  summarizer.py  topic_modeling.py  utils.py  visualization.py
test_files/sheetshuttle_files/: __init__.py  github_interaction.py  github_objects.py  main.py  sheet_collector.py  util.py
tests/: test_CLI.py  test_find.py  test_generator.py
(+27 files in other folders)
