[tool.poetry]
name = "namepy"
version = "0.1.0"
description = ""
authors = ["antlet <antlet@allegheny.edu>"]
readme = "README.md"
packages = [{include = "namepy"}]

[tool.poetry.scripts]
namepy = "namepy.CLI:app"

[tool.poetry.dependencies]
python3 = "^3.10.6"
typer = "^0.4"
libcst = "^0.4"
wrapt = "^1.14.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.12.2"
taskipy = "^1.10.3"

[tool.taskipy.tasks]
pylint = "pylint namepy/ tests/"
test = "pytest tests/"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
