[tool.poetry]
name = "namepy"
version = "0.1.0"
description = ""
authors = ["antlet <antlet@allegheny.edu>"]
readme = "README.md"
packages = [{include = "namepy"}]

[tool.poetry.scripts]
namepy = "namepy.CLI:app"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.4"
libcst = "^0.4"
spacy = "^3.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.12.2"
taskipy = "^1.10.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
